--- a/src/css/app.css
+++ b/src/css/app.css
@@ -33,4 +33,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 30px;
+    background: none;
+    color: red;
+    border-radius: 50%;
+    outline: none;
+    cursor: pointer;
+}
+.controls,
+summary {
+    text-align: right;
+}
+.delete-entry:hover {
+    background:rgba(255, 0, 0, 0.1) ;
 }
